--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   "description": "An NPM package that simplifies the readline and IO processes.",
   "main": "index.js",
   "author": "Kent Tonino",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc --build",
+    "start": "node ./dist/index.js",
+    "format": "prettier --write \"./src/**/*.ts\""
+  },
+  "dependencies": {
+    "@types/node": "^20.6.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
+  }
 }
+
