--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "outDir": "./dist",
     "declaration": true
   },
